# rust-demo-web-server

./: Cargo.toml  README.md
src/: config.rs  handlers.rs  main.rs  middleware.rs  models.rs  routes.rs  utils.rs
src/services/: mod.rs  redis_service.rs
