[package]
name = "demo-web-server"
version = "0.1.0"
edition = "2021"
description = "Демонстрационный веб-сервер на Rust с различными типами эндпоинтов"
authors = ["Rust Developer"]

[dependencies]
# Веб-фреймворк
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "fs", "compression-full"] }

# Асинхронный рантайм
tokio = { version = "1.35", features = ["full"] }

# Логирование
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Конфигурация
dotenv = "0.15"
config = "0.13"

# Сериализация/десериализация
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Работа с базой данных
redis = { version = "0.23.0", features = ["tokio-comp", "connection-manager"] }
uuid = { version = "1.6", features = ["serde", "v4"] }

# Аутентификация и авторизация
jsonwebtoken = "9.2"
argon2 = "0.5"

# Утилиты
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
validator = { version = "0.16", features = ["derive"] }
async-trait = "0.1"
futures = "0.3"
once_cell = "1.19"
